--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="destination" id="london">
                 <h2>London</h2>
             </div>
+
+            <div class="destination" id="kyoto">
+                <h2>Kyoto</h2>
+            </div>
         </div>
     </div>
 
